force-app/main/default/objects/Order__c/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <inlineHelpText>Parent Account related to customer</inlineHelpText>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>