force-app/main/default/objects/Order__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The customer record under which order is created</inlineHelpText>
    <label>Customer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>