force-app/main/default/objects/Order__c/fields/ExpectedDate__c.field-meta.xml
<CustomField>
    <fullName>ExpectedDate__c</fullName>
    <inlineHelpText>The expected delivery date of the order</inlineHelpText>
    <label>Expected Delivery Date</label>
    <type>Date</type>
</CustomField>