force-app/main/default/objects/Order__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Status of the Order Record</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open,</fullName>
            </value>
            <value>
                <fullName>In Process,</fullName>
            </value>
            <value>
                <fullName>Dispatched,</fullName>
            </value>
            <value>
                <fullName>Shipped,</fullName>
            </value>
            <value>
                <fullName>Out for Delivery,</fullName>
            </value>
            <value>
                <fullName>Delivered,</fullName>
            </value>
            <value>
                <fullName>Closed,</fullName>
            </value>
            <value>
                <fullName>Return Requested,</fullName>
            </value>
            <value>
                <fullName>Returned,</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>