force-app/main/default/objects/Order__c/fields/Totalitems__c.field-meta.xml
<CustomField>
    <fullName>Totalitems__c</fullName>
    <inlineHelpText>The order quantity</inlineHelpText>
    <label>Total items</label>
    <summarizedField>Order_Line_Item__c.Quantity__c</summarizedField>
    <summaryForeignKey>Order_Line_Item__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>