force-app/main/default/objects/Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ExpectedDate__c</columns>
    <columns>Total__c</columns>
    <columns>BillingAddress__c</columns>
    <columns>Shipping_Address__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>